# yuho

./: .dockerignore  .flake8  .gitattributes  .gitignore  .phase_d_flag_fix_progress.jsonl  .phase_d_l3_progress.jsonl  .phase_d_progress.jsonl  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  DOCUMENTATION_DEPLOYMENT.md  DOCUMENTATION_STATUS.md  Dockerfile  LICENSE  MEMORY.md  Makefile  README.md  SECURITY.md  TESTING_GUIDE.md  TODO.md  WORKON-PIVOT-ASAP.md  cabal.project  docker-compose.yml  euclid.cabal  index.html  install.sh  mkdocs.yml  napkin.txt  ok.yh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap.md  setup.py  setup.sh  sitemap.xml  (+2 more)
archive/yuho_v3/: .editorconfig  Cargo.toml  clippy.toml  install-hooks.sh  rustfmt.toml  yuho.toml.example
archive/yuho_v3/docs/: CITATION_VALIDATION.md  CONFLICT_DETECTION.md  CONSTRAINT_INHERITANCE.md  DECISION_TREE_VISUALIZATION.md  GENERIC_TYPES.md  LEGAL_CITATIONS.md  LEGAL_CONDITION_CHAINS.md  LEGAL_PRECEDENT_CITATIONS.md  LEGAL_PRINCIPLE_VERIFICATION.md  MUTUAL_EXCLUSIVITY.md  NESTED_QUANTIFIERS.md  PATTERN_GUARDS.md  PRESUMPTION_TRACKING.md  SINGAPORE_LAW_GAZETTE.md  TEMPORAL_LOGIC.md  TYPE_ALIASES.md  VERIFICATION_COMMAND.md  Z3_TRANSLATION.md
archive/yuho_v3/examples/: annotations_complete.yh  cheating.yh  citation_validation.yh  citations.yh  complete_feature_demo.yh  currency_types.yh  date_constraints.yh  decision_trees.yh  dependent_types.yh  gazette_format.yh  gazette_simple.yh  generic_type_aliases.yh  generics.yh  generics_comprehensive.yh  inheritance.yh  nested_quantifiers.yh  pattern_guards.yh  precedents.yh  presumptions.yh  principles.yh  proviso_clauses.yh  real_world_contracts.yh  simple_decision.yh  simple_principle.yh  temporal_logic.yh  test_generics_simple.yh  type_aliases.yh  type_aliases_test.yh  verify_principle_example.yh  where_clauses.yh  z3_principles.yh
archive/yuho_v3/std/: README.md
archive/yuho_v3/templates/: README.md
src/: README.md  hatch_build.py  pyproject.toml
src/Euclid/CLI/: Options.hs
src/Euclid/Config/: Loader.hs
src/Euclid/Core/: Diff.hs  Eval.hs  Filter.hs  Reports.hs  Typecheck.hs  Validation.hs
src/Euclid/Import/: CSV.hs  GEDCOM.hs  JSONLD.hs
src/Euclid/Lang/: AST.hs  Loader.hs  Parser.hs
src/Euclid/Model/: Types.hs
src/Euclid/Playground/: API.hs
src/Euclid/Render/: Diff.hs  HTML.hs  JSON.hs  Layout.hs  Markdown.hs  Mermaid.hs  SVG.hs
src/Euclid/TUI/: App.hs
src/Euclid/Tooling/: LSP.hs  Syntax.hs
src/archive/: README.md
src/archive/ast/: ast.rs
src/archive/parser/: parser.rs
src/archive/token/: token.rs
src/ast/: ast.rkt
src/lexer/: lexer.hs  lexer.rkt
src/main/: README.md  Yuho.g4  Yuho.interp  Yuho.tokens  YuhoBaseListener.java  YuhoLexer.interp  YuhoLexer.java  YuhoListener.java  YuhoParser.java
src/main/cli/: README.md  yuho_approve.rkt  yuho_draft.rkt
src/main/token/: token.rkt
src/main/transpiler/: README.md
src/parser/: parser.hs
src/repl/: repl.hs
src/secondary/json_to_mmd/: theft.mmd
src/secondary/yuhoToAlloy/: ast.rs  transpiler.rs
src/secondary/yuhoToCatala/: README.md  dune  main.ml  output.catala_en  parser.ml  transpiler.ml
src/secondary/yuhoToFStar/: output.fs  transpiler.rs
src/secondary/yuhoToJSON/: ast.py  transpiler.py
src/secondary/yuhoToJavaScript/: README.md  output.js
src/secondary/yuhoToR/: transpiler.rs
src/secondary/yuhoToWhiley/: output.wy
src/secondary/yuho_json_mmd_to_html/: theft.html
src/transpiler/to_mmd/: trans_mmd_flowchart.rkt
src/tree-sitter-yuho/: Cargo.toml  GRAMMAR.md  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
src/tree-sitter-yuho/queries/: folds.scm  highlights.scm  indents.scm
src/tree-sitter-yuho/src/: grammar.json  node-types.json  parser.c  scanner.c
src/tree_sitter_yuho/: __init__.py  libtree-sitter-yuho.dylib
src/yuho/: __init__.py  caselaw.py  logging_utils.py  provenance.py
src/yuho/api/: __init__.py  jobs.py  sse.py  websocket.py
src/yuho/ast/: __init__.py  builder.py  constant_folder.py  dead_code.py  exhaustiveness.py  nodes.py  overlap.py  reachability.py  scope_analysis.py  statute_lint.py  transformer.py  type_check.py  type_inference.py  visitor.py
src/yuho/chronology/: __init__.py  constraints.py  evaluator.py  importers.py  model.py  renderers.py  reports.py  validation.py
src/yuho/cli/: __init__.py  commands_registry.py  completions.py  error_formatter.py  main.py
src/yuho/config/: __init__.py  loader.py  mask.py  schema.py
src/yuho/eval/: __init__.py  debugger.py  defeasible.py  facts.py  interpreter.py  statute_evaluator.py
src/yuho/events/: __init__.py  model.py  webhook.py
src/yuho/explain/: __init__.py  datalog.py
src/yuho/explore/: counterexamples.py
src/yuho/llm/: __init__.py  config.py  factory.py  prompts.py  providers.py  utils.py
src/yuho/lsp/: __init__.py  code_action_handler.py  completion_handler.py  diagnostics.py  hover_handler.py  server.py
src/yuho/mcp/: __init__.py  server.py
src/yuho/middleware/: __init__.py  auth.py  metrics.py  rate_limit.py
src/yuho/output/: __init__.py  junit.py  sarif.py
src/yuho/parser/: __init__.py  source_location.py  wrapper.py
src/yuho/recommend/: charge_recommender.py
src/yuho/registry/: __init__.py  server.py
src/yuho/resolver/: __init__.py  module_resolver.py
src/yuho/services/: __init__.py  analysis.py  errors.py
src/yuho/testing/: __init__.py  coverage.py  fixtures.py
src/yuho/transpile/: __init__.py  akn_validator.py  akomantoso_transpiler.py  alloy_transpiler.py  base.py  bibtex_transpiler.py  blocks_transpiler.py  catala_transpiler.py  comparative_transpiler.py  docx_transpiler.py  english_transpiler.py  fstar_transpiler.py  graphql_transpiler.py  html_transpiler.py  json_schema.py  json_transpiler.py  jsonld_transpiler.py  latex_preamble.py  latex_transpiler.py  latex_utils.py  legalruleml_transpiler.py  mermaid_mindmap_transpiler.py  mermaid_renderer.py  mermaid_transpiler.py  pdf_pipeline.py  registry.py  (+3 more)
(+1365 files in other folders)
