cabal-version:      3.0
name:               euclid
version:            0.1.0.0
synopsis:           Euclid timeline DSL and terminal explorer
description:        Haskell implementation of Euclid with parsing, evaluation, validation, SVG export, REPL, LSP, and a Brick-based TUI.
license:            MIT
license-file:       LICENSE
author:             gabriel ong
maintainer:         gabriel ong
build-type:         Simple
extra-doc-files:    README.md

common common-settings
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.16 && <5,
        aeson >=2.0,
        brick >=2.1,
        bytestring >=0.11,
        containers >=0.6,
        directory >=1.3,
        filepath >=1.4,
        megaparsec >=9.2,
        mtl >=2.2,
        optparse-applicative >=0.18,
        parser-combinators >=1.3,
        text >=2.0,
        time >=1.11,
        tomland >=1.3,
        vector >=0.13,
        vty >=6.1

library
    import: common-settings
    hs-source-dirs: src
    exposed-modules:
        Euclid.CLI.Options
        Euclid.Config.Loader
        Euclid.Core.Diff
        Euclid.Core.Eval
        Euclid.Core.Validation
        Euclid.Import.CSV
        Euclid.Import.GEDCOM
        Euclid.Import.JSONLD
        Euclid.Lang.AST
        Euclid.Lang.Parser
        Euclid.Model.Types
        Euclid.Render.HTML
        Euclid.Render.JSON
        Euclid.Render.Layout
        Euclid.Render.Markdown
        Euclid.Render.Mermaid
        Euclid.Render.SVG
        Euclid.Tooling.LSP
        Euclid.Tooling.Syntax
        Euclid.TUI.App

executable euclid
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        euclid

test-suite euclid-test
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        hspec >=2.11,
        euclid
