[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuho"
version = "5.1.0"
description = "A domain-specific language for encoding legal statutes"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gabriel Ong Zhe Mian", email = "gabrielzmong@gmail.com" }
]
keywords = ["legal", "dsl", "statute", "law", "parser", "transpiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0,<9.0",
    "tree-sitter>=0.21.0,<1.0",
]

[project.optional-dependencies]
lsp = [
    "pygls>=1.0,<2.0",
]
mcp = [
    "fastmcp>=0.1,<1.0",
    "httpx>=0.24,<1.0",
]
observability = [
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-api>=1.20,<2.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "hypothesis>=6.0,<7.0",
    "black>=23.0,<25.0",
    "mypy>=1.0,<2.0",
]
scrape = [
    "playwright>=1.40,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
]
all = [
    "yuho[lsp,mcp,observability,dev,scrape]",
]

[project.scripts]
yuho = "yuho.cli:cli"

[project.urls]
Homepage = "https://github.com/gongahkia/yuho"
Documentation = "https://github.com/gongahkia/yuho/tree/main/docs"
Repository = "https://github.com/gongahkia/yuho"

[tool.hatch.build.targets.wheel]
packages = ["src/yuho", "src/tree_sitter_yuho"]

[tool.hatch.build.hooks.custom]
path = "src/hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/yuho/**",
    "src/tree-sitter-yuho/grammar.js",
    "src/tree-sitter-yuho/src/**",
    "src/tree-sitter-yuho/bindings/python/**",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "yuho.mcp.server",
    "yuho.library.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_unreachable = true
