[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuho"
version = "5.0.0"
description = "A domain-specific language for encoding legal statutes"
readme = "../README.md"
license = "MIT"
authors = [
    { name = "gongahkia", email = "gongahkia@example.com" }
]
keywords = ["legal", "dsl", "statute", "law", "parser", "transpiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tree-sitter>=0.21.0",
]

[project.optional-dependencies]
lsp = [
    "pygls>=1.0",
]
mcp = [
    "fastmcp>=0.1",
    "httpx>=0.24",
]
llm = [
    "httpx>=0.24",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "mypy>=1.0",
]
all = [
    "yuho[lsp,mcp,llm,dev]",
]

[project.scripts]
yuho = "yuho.cli:cli"

[project.urls]
Homepage = "https://github.com/gongahkia/yuho"
Documentation = "https://yuho.dev/docs"
Repository = "https://github.com/gongahkia/yuho"

[tool.hatch.build.targets.wheel]
packages = ["yuho", "tree_sitter_yuho"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
