[package]
name = "yuho-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
logos.workspace = true
lalrpop-util.workspace = true

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
lalrpop = "0.20"
