[package]
name = "yuho-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
yuho-core = { path = "../yuho-core" }
yuho-config = { path = "../yuho-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
